--- a/application/flutter/ohzas/pubspec.yaml
+++ b/application/flutter/ohzas/pubspec.yaml
@@ -29,6 +29,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/xlayer_logo_v2.png
     - assets/image_01.png
     - assets/image_02.png
     - assets/logo.png
