--- a/application/flutter/ohzas/pubspec.yaml
+++ b/application/flutter/ohzas/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   datetime_picker_formfield: 1.0.0
   intl: 0.16.1
   toast: ^0.1.5
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_test:
