Included cancellation fee feature

--- a/server/configuration.json
+++ b/server/configuration.json
@@ -161,6 +161,10 @@
                 {
                     "name":"serviceList",
                     "code":1
+                },
+                {
+                    "name":"cancelFee",
+                    "code":2
                 }
             ]
         },
