--- a/portal/admin/package.json
+++ b/portal/admin/package.json
@@ -47,7 +47,9 @@
     "firebase": "^5.1.0",
     "hammerjs": "^2.0.8",
     "highlight.js": "^9.12.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jshint": "^2.9.6",
+    "jspdf": "^1.5.3",
     "leaflet": "^1.3.1",
     "moment": "^2.22.2",
     "ng-pick-datetime": "6.0.16",
@@ -67,7 +69,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.6",
+    "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
@@ -83,6 +85,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.14.1",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "^5.9.1",
