1. GET api for user info. 2.API's done for service provider

--- a/server/configuration.json
+++ b/server/configuration.json
@@ -165,6 +165,10 @@
                 {
                     "name":"cancelFee",
                     "code":2
+                },
+                {
+                    "name":"serviceProvider",
+                    "code":3
                 }
             ]
         },
