--- a/application/flutter/ohzas/pubspec.yaml
+++ b/application/flutter/ohzas/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   url_launcher: ^5.4.10
   share: 0.6.4+3
   firebase_messaging: 6.0.16
+  firebase_analytics: ^5.0.16
+  
 
 dev_dependencies:
   flutter_test:
