--- a/portal/service_provider/package.json
+++ b/portal/service_provider/package.json
@@ -51,11 +51,12 @@
     "firebase": "^5.1.0",
     "hammerjs": "^2.0.8",
     "highlight.js": "^9.12.0",
+    "html2canvas": "^1.0.0-rc.7",
     "jshint": "^2.9.6",
+    "jspdf": "^2.1.1",
     "leaflet": "^1.3.1",
     "mat-video": "^2.7.2",
     "moment": "^2.22.2",
-    "ngx-mask": "^7.9.9",
     "ng-image-slider": "^2.5.0",
     "ng-pick-datetime": "6.0.16",
     "ng2-charts": "^1.6.0",
@@ -64,6 +65,7 @@
     "ng2-odometer": "^1.1.3",
     "ng2-page-transition": "^1.1.0",
     "ngx-malihu-scrollbar": "7.0.0",
+    "ngx-mask": "^7.9.9",
     "ngx-perfect-scrollbar": "^6.2.0",
     "ngx-quill": "^3.2.0",
     "node-sass": "^4.14.1",
