number included in config to receive sms notification

--- a/server/configuration.json
+++ b/server/configuration.json
@@ -221,6 +221,11 @@
             "key": "190375A8pqgqS55cb1f0d8"
         }
     ],
+    "medAdmin_contact":[
+        {
+            "num1":"8765178701"
+        }
+    ],
     "maps": [
         {
             "name": "google",
