--- a/server_v2/configuration.json
+++ b/server_v2/configuration.json
@@ -168,7 +168,7 @@
                     "code":1
                 },
                 {
-                    "name":"Doctorlocation",
+                    "name":"SlotInfo",
                     "code":2
                 },
                 {
